@@ -175,6 +175,7 @@ export(umx_set_checkpoint)
 export(umx_set_condensed_slots)
 export(umx_set_cores)
 export(umx_set_optimizer)
+export(umx_set_plot_file_suffix)
 export(umx_set_plot_format)
 export(umx_set_table_format)
 export(umx_show)
