@@ -39,5 +39,6 @@ Other Get and set: \code{\link{umx_get_checkpoint}},
   \code{\link{umx_set_condensed_slots}},
   \code{\link{umx_set_cores}},
   \code{\link{umx_set_optimizer}},
+  \code{\link{umx_set_plot_file_suffix}},
   \code{\link{umx_set_plot_format}}
 }
